--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,8 +27,8 @@ jobs:
           
       - name: commit files
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "ajaykr@bu.edu"
+          git config --local user.name "ajay2093"
           git add -A
           git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
           
